Web Share: Update implementation to match recent spec changes.

- Changed user gesture check from SecurityError to NotAllowedError.
- Throw a TypeError if no recognised fields in the ShareData dictionary.
- IDL: Made ShareData parameter optional (no behavioural effect, other
  than changing Navigator.share.length from 1 to 0).

Removed 3 tests that now fail. These have been converted into automated
tests in WPT so we are still running them, but they are upstream.

Fixed failing WPTs and removed expectations of failure.

Bug: 738956, 738957
Change-Id: I2146a3dc98dd30dc591ea9ccaedf436ca1111531
Reviewed-on: https://chromium-review.googlesource.com/558595
Reviewed-by: David Trainor <dtrainor@chromium.org>
Reviewed-by: Sam McNally <sammc@chromium.org>
Commit-Queue: Matt Giuca <mgiuca@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486184}
Former-commit-id: a6e2065dffc8ae4d3df8cc23434bd8cf097f89ca